--- a/content/themes/elements/scss/layout/_header.scss
+++ b/content/themes/elements/scss/layout/_header.scss
@@ -1,14 +1,18 @@
 body > header{
-  @include flexbox;
-  @include align-items( center );
-  @include justify-content( space-between );
-
-  position: fixed;
   z-index: $zIndex-header;
 
   width: 100%;
   height: $header-height;
 
   background-color: $white;
-  // border-bottom: thin solid $grey-light;
+  border-bottom: thin solid $grey;
+  
+  .header__body{
+    @include flexbox;
+    @include flex-direction(column);
+    @include justify-content(space-between);
+
+    height: 100%;
+    padding: 40px 15px 10px;
+  }
 }
