--- a/content/themes/elements/scss/layout/navigation/_nav.scss
+++ b/content/themes/elements/scss/layout/navigation/_nav.scss
@@ -5,8 +5,32 @@ nav ul{
     display: inline-block;
     padding-right: 30px;
 
+    &:first-child{
+      padding-right: 15px;
+      margin-right: 15px;
+
+      &:after{
+        content: "";
+
+        top: 0;
+        right: 0;
+        position: absolute;
+
+        width: 1px;
+        height: 100%;
+
+        background-color: $grey;
+      }
+    }
+
     &:last-child{
       padding-right: 0;
+    }
+
+    &.is-active{
+      a{
+        color: $black;
+      }
     }
   }
 }
