--- a/content/themes/elements/scss/modules/posts/_posts-thumb.scss
+++ b/content/themes/elements/scss/modules/posts/_posts-thumb.scss
@@ -1,9 +1,13 @@
-ul.posts{
+.posts{
   li{
+    margin-bottom: 40px;
+
+    box-shadow: 0 50px 50px -50px rgba(0,0,0,.2);
+
     div{
       padding: 15px 30px;
 
-      background-color: $grey-light;
+      background-color: $white;
 
       .post-category{
         margin-bottom: 10px;
@@ -20,10 +24,28 @@ ul.posts{
     div:first-child{
       padding-bottom: 200px;
     }
+  }
+}
 
-    img{
-      display: block;
-      margin-top: -185px;
+.posts li.post--featured{
+  @include flexbox;
+
+  &:nth-child(1){
+    figure{
+      width: 70%;
+
+      img{
+        width: 100%;
+      }
     }
+
+    > div{
+      width: 30%;
+    }
+  }
+
+  &:nth-child(2),
+  &:nth-child(3){
+    flex-direction: column;
   }
 }
