--- a/content/themes/elements/scss/base/typo/_links.scss
+++ b/content/themes/elements/scss/base/typo/_links.scss
@@ -1,10 +1,10 @@
 a{
-  @include transition( .2s );
-
   font-size: 1em;
   color: $grey-text;
   text-decoration: none;
   cursor: pointer;
+
+  transition: .2s;
 
   &:hover,
   &:focus{
