--- a/content/themes/elements/scss/layout/_header.scss
+++ b/content/themes/elements/scss/layout/_header.scss
@@ -6,11 +6,12 @@ body > header{
 
   background-color: $white;
   border-bottom: thin solid $grey;
-  
+
   .header__body{
-    @include flexbox;
-    @include flex-direction(column);
-    @include justify-content(space-between);
+    @include flexbox{
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
     height: 100%;
     padding: 40px 15px 10px;
