--- a/content/themes/elements/scss/modules/content/_hero.scss
+++ b/content/themes/elements/scss/modules/content/_hero.scss
@@ -15,12 +15,12 @@ section.hero{
   }
 
   .section-body{
-    @include transform( translate(-50%, -50%) );
-
     top: 50%;
     left: 50%;
     position: absolute;
 
     margin: auto;
+
+    transform: translate(-50%, -50%);
   }
 }
