Fix color variables

--- a/content/themes/elements/scss/base/_colors.scss
+++ b/content/themes/elements/scss/base/_colors.scss
@@ -1,6 +1,6 @@
-$black: rgba(0,0,0,1);
-$white: rgba(255,255,255,1);
+$color-black: rgba(0,0,0,1);
+$color-white: rgba(255,255,255,1);
 
-$grey: rgba(224,224,224,1);
-$grey-text: rgba(136,136,136,1);
-$grey-light: #f6f6f6;
+$color-grey: rgba(224,224,224,1);
+$color-grey-text: rgba(136,136,136,1);
+$color-grey-light: #f6f6f6;
