--- a/content/themes/elements/scss/modules/_arrow.scss
+++ b/content/themes/elements/scss/modules/_arrow.scss
@@ -3,8 +3,8 @@
   height: 30px;
 
   cursor: pointer;
-  border-right: 2px solid $black;
-  border-bottom: 2px solid $black;
+  border-right: 2px solid $color-black;
+  border-bottom: 2px solid $color-black;
 
   transform: rotate(45deg);
 
