--- a/content/themes/elements/scss/states/_typography.scss
+++ b/content/themes/elements/scss/states/_typography.scss
@@ -39,10 +39,10 @@ body{
 
   // Colors
   &.is-black{
-    color: $black;
+    color: $color-black;
   }
 
   &.is-white{
-    color: $white;
+    color: $color-white;
   }
 }
