--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -8,6 +8,7 @@
   "base/_reset",
   "base/_mixins",
   "base/_colors",
+  "base/_z-index",
 
   "base/typo/_fonts",
   "base/typo/_typography",
@@ -15,23 +16,20 @@
 
 // LAYOUT
 @import
-  "layout/_z-index",
+  "layout/_404",
+  "layout/_footer",
+  "layout/_header",
   "layout/_html",
   "layout/_layout",
   "layout/_main",
-  "layout/_header",
-  "layout/_footer",
-  "layout/_404",
-
-  "layout/navigation/_menu.scss",
-  "layout/navigation/_nav.scss";
+  "layout/_navigation",
+  "layout/_settings";
 
 // MODULE
 @import
   "modules/_arrow",
 
   "modules/content/_section",
-  "modules/content/_hero",
   "modules/content/_text",
   "modules/content/_image",
   "modules/content/_grid",
