--- a/content/themes/elements/scss/base/typo/_links.scss
+++ b/content/themes/elements/scss/base/typo/_links.scss
@@ -1,6 +1,6 @@
 a{
   font-size: 1em;
-  color: $grey-text;
+  color: $color-grey-text;
   text-decoration: none;
   cursor: pointer;
 
@@ -8,38 +8,58 @@ a{
 
   &:hover,
   &:focus{
-    color: $black;
+    color: $color-black;
   }
-}
-
-// Link tags with headings, divs or images in them get has-content class to serve as click container
-a.has-content{
-  color: $black;
-  text-decoration: none;
 }
 
 // Links in articles
 article a{
-  border-bottom: thin solid $grey-text;
+  border-bottom: thin solid $color-grey-text;
 
   &:hover,
   &:focus{
-    border-color: $black;
+    border-color: $color-black;
   }
 }
 
 // Navigation in header
 nav a{
-  padding-bottom: 0;
+  @include font-medium{
+    color: $color-grey-text;
+    font-size: 14px;
+    letter-spacing: 0.4px;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 
-  color: $grey-text;
-  font-size: 14px;
-  letter-spacing: 0.4px;
-  text-decoration: none;
+  padding: 20px 0;
+  margin: 0 15px;
+  display: block;
+
+  transition: .35s;
+
+  &:after{
+    @include hide(.35s);
+
+    content: "";
+
+    bottom: 0;
+    left: 0;
+    position: absolute;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: $color-black;
+  }
 
   &:hover,
   &:focus{
+    color: $color-black;
 
+    &:after{
+      @include show(.35s);
+    }
   }
 }
 
@@ -48,6 +68,6 @@ nav .current-menu-item{
   a{
     padding-bottom: 5px;
 
-    border-bottom: thin solid $black;
+    border-bottom: thin solid $color-black;
   }
 }
