--- a/content/themes/elements/scss/layout/_footer.scss
+++ b/content/themes/elements/scss/layout/_footer.scss
@@ -4,9 +4,9 @@ body > footer{
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background: $black;
+  background: $color-black;
 
   p, a{
-    color: $white;
+    color: $color-white;
   }
 }
