--- a/content/themes/elements/scss/modules/posts/_posts-thumb.scss
+++ b/content/themes/elements/scss/modules/posts/_posts-thumb.scss
@@ -7,7 +7,7 @@
     div{
       padding: 15px 30px;
 
-      background-color: $white;
+      background-color: $color-white;
 
       .post-category{
         margin-bottom: 10px;
