--- a/content/themes/elements/scss/modules/posts/_single.scss
+++ b/content/themes/elements/scss/modules/posts/_single.scss
@@ -18,7 +18,7 @@ body.single-post article header{
     }
 
     span{
-      color: $grey-text;
+      color: $color-grey-text;
     }
 
     span:last-child{
