Set up typography

--- a/content/themes/elements/scss/base/typo/_typography.scss
+++ b/content/themes/elements/scss/base/typo/_typography.scss
@@ -2,6 +2,8 @@ body{
   @include openSans;
 
   font-size: 16px;
+  font-weight: 300;
+  color: #222;
 }
 
 @mixin font-light{
@@ -15,7 +17,7 @@ body{
 }
 
 @mixin font-medium{
-  font-weight: 700;
+  font-weight: 600;
   @content;
 }
 
@@ -25,11 +27,15 @@ body{
 }
 
 h1{
-  font-size: 4.5em;
+  font-size: 2.188em; //35px
 }
 
 h2{
-  font-size: 2em;
+  font-size: 1.750em; //28px
+}
+
+h3,h4,h5,h6{
+    font-size: 1.125em; //18px
 }
 
 p{
@@ -38,4 +44,8 @@ p{
 
 b, strong{
   @include font-medium;
+}
+
+small{
+    font-size: 0.875em; //14px
 }
