--- a/content/themes/elements/scss/base/_colors.scss
+++ b/content/themes/elements/scss/base/_colors.scss
@@ -1,6 +1,8 @@
 $color-black: rgba(0,0,0,1);
 $color-white: rgba(255,255,255,1);
 
-$color-grey: rgba(224,224,224,1);
-$color-grey-text: rgba(136,136,136,1);
-$color-grey-light: #f6f6f6;
+$color-grey: #ebebeb;
+$color-grey-text: #4B4B4B;
+$color-grey-light: #f4f4f4;
+
+$color-blue: #0085C2;
