--- a/content/themes/elements/scss/base/typo/_links.scss
+++ b/content/themes/elements/scss/base/typo/_links.scss
@@ -13,7 +13,7 @@ a{
 }
 
 // Links in articles
-article a{
+article section a{
   border-bottom: thin solid $color-grey-text;
 
   &:hover,
@@ -26,8 +26,7 @@ article a{
 nav{
   a{
     @include font-medium{
-      color: $color-grey-text;
-      font-size: 14px;
+      color: #929292;
       letter-spacing: 0.4px;
       text-decoration: none;
       text-transform: uppercase;
@@ -57,6 +56,7 @@ nav{
     &:hover,
     &:focus{
       color: $color-black;
+      text-decoration: none;
 
       &:after{
         @include show(.35s);
