Add image sizes

--- a/content/themes/elements/scss/layout/_main.scss
+++ b/content/themes/elements/scss/layout/_main.scss
@@ -3,6 +3,7 @@ main{
   height: 100%;
   min-height: 100%;
   overflow: hidden;
+  padding: 15px;
 
-  background-color: $color-grey-light;
+  background-color: $color-white;
 }
