--- a/content/themes/elements/scss/base/typo/_links.scss
+++ b/content/themes/elements/scss/base/typo/_links.scss
@@ -14,12 +14,7 @@ a{
 
 // Links in articles
 article section a{
-  border-bottom: thin solid $color-grey-text;
-
-  &:hover,
-  &:focus{
-    border-color: $color-black;
-  }
+  text-decoration: underline;
 }
 
 // Navigation in header
