--- a/content/themes/elements/scss/base/typo/_fonts.scss
+++ b/content/themes/elements/scss/base/typo/_fonts.scss
@@ -1,5 +1,13 @@
-@mixin openSans{
-  font-family: 'Open Sans', sans-serif;
-  font-style: normal;
-  font-weight: normal;
+@mixin font-openSans{
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    @content;
+}
+
+@mixin font-PT{
+    font-family: 'PT Serif', serif;
+    font-style: normal;
+    font-weight: normal;
+    @content;
 }
