--- a/content/themes/elements/scss/base/typo/_typography.scss
+++ b/content/themes/elements/scss/base/typo/_typography.scss
@@ -1,5 +1,5 @@
 body{
-  @include openSans;
+  @include font-openSans;
 
   font-size: 16px;
   font-weight: 300;
@@ -48,4 +48,8 @@ b, strong{
 
 small{
     font-size: 0.875em; //14px
+}
+
+time{
+    text-transform: uppercase;
 }
