Add article footer styling

--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -23,5 +23,7 @@
 @import "modules/sections/_section-text";
 
 @import "modules/_article";
+@import "modules/_buttons";
 @import "modules/_figure";
 @import "modules/_links";
+@import "modules/_lists";
