--- a/content/themes/elements/scss/modules/_article.scss
+++ b/content/themes/elements/scss/modules/_article.scss
@@ -7,7 +7,7 @@ article{
     header{
         padding-top: 30px;
         padding-bottom: 20px;
-        
+
         small{
             @include font-regular{
                 color: $color-grey-text-light;
@@ -20,6 +20,24 @@ article{
 
         h1{
             margin: 10px 0;
+        }
+    }
+
+    footer{
+        padding-top: 60px;
+        padding-bottom: 30px;
+
+        text-align: center;
+
+        p{
+            @include font-medium;
+
+            margin-bottom: 15px;
+        }
+
+        .btn{
+            width: 170px;
+            margin: 0 10px;
         }
     }
 }
