Fix post queries

--- a/content/themes/elements/scss/modules/_figure.scss
+++ b/content/themes/elements/scss/modules/_figure.scss
@@ -1,9 +1,3 @@
 figure{
-    figcaption{
-        padding: 10px;
-
-        color: $color-grey-text-light;
-        text-align: center;
-        font-size: .875em; //14px
-    }
+    margin: 0;
 }
