--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -19,11 +19,14 @@
 
 // MODULE
 @import "modules/sections/_section";
+@import "modules/sections/_section-image";
 @import "modules/sections/_section-quote";
 @import "modules/sections/_section-text";
 
 @import "modules/_article";
 @import "modules/_buttons";
 @import "modules/_figure";
+@import "modules/_grid";
 @import "modules/_links";
 @import "modules/_lists";
+@import "modules/_post";
