--- a/content/themes/elements/scss/layout/_main.scss
+++ b/content/themes/elements/scss/layout/_main.scss
@@ -3,7 +3,7 @@ main{
   height: 100%;
   min-height: 100%;
   overflow: hidden;
-  padding: 15px;
+  padding: 15px 0;
 
   background-color: $color-white;
 }
