--- a/content/themes/elements/scss/base/typo/_typography.scss
+++ b/content/themes/elements/scss/base/typo/_typography.scss
@@ -30,11 +30,11 @@ h1{
   font-size: 2.188em; //35px
 }
 
-h2{
+h2,h3{
   font-size: 1.750em; //28px
 }
 
-h3,h4,h5,h6{
+h4,h5,h6{
     font-size: 1.125em; //18px
 }
 
