--- a/content/themes/elements/scss/modules/_lists.scss
+++ b/content/themes/elements/scss/modules/_lists.scss
@@ -9,4 +9,15 @@
             }
         }
     }
+
+    &--posts{
+        li{
+            padding: 30px 0;
+            border-bottom: 1px solid $color-grey;
+
+            .media__image{
+                width: 270px;
+            }
+        }
+    }
 }
