--- a/content/themes/elements/scss/modules/_lists.scss
+++ b/content/themes/elements/scss/modules/_lists.scss
@@ -18,6 +18,12 @@
             .media__image{
                 width: 270px;
             }
+
+            .media__body{
+                .post-data{
+                    margin-top: 30px;
+                }
+            }
         }
     }
 }
