--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -3,6 +3,7 @@
 @import "base/_reset";
 @import "base/_mixins";
 @import "base/_colors";
+@import "base/_icons";
 @import "base/_media-queries";
 
 @import "base/typo/_fonts";
