--- a/content/themes/elements/scss/modules/_grid.scss
+++ b/content/themes/elements/scss/modules/_grid.scss
@@ -5,10 +5,12 @@
 }
 
 .grid-item{
+    min-height: 500px;
+    
     figure{
         width: 100%;
         height: 100%;
-        
+
         background-color: $color-white;
 
         > a{
@@ -23,7 +25,7 @@
         figcaption{
             padding: 30px;
 
-            > *{
+            > *:not(.post-data){
                 display: block;
                 margin-bottom: 15px;
 
@@ -36,6 +38,13 @@
                     font-size: 1.5em; //24px
                 }
             }
+        }
+
+        // for semi featured posts
+        > .post-data{
+            bottom: 30px;
+            left: 30px;
+            position: absolute;
         }
     }
 }
