--- a/content/themes/elements/scss/modules/_grid.scss
+++ b/content/themes/elements/scss/modules/_grid.scss
@@ -6,7 +6,7 @@
 
 .grid-item{
     min-height: 500px;
-    
+
     figure{
         width: 100%;
         height: 100%;
@@ -45,6 +45,46 @@
             bottom: 30px;
             left: 30px;
             position: absolute;
+        }
+    }
+
+    // Variations
+    &--about{
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+
+        &:before{
+            content: "";
+
+            top: 0;
+            left: 0;
+            position: absolute;
+            z-index: 0;
+
+            width: 100%;
+            height: 100%;
+
+            background-image: linear-gradient(to bottom, rgba(0,0,0,.2), transparent);
+        }
+
+        figure{
+            background-color: transparent;
+
+            figcaption{
+                padding-top: 60px;
+
+                text-align: center;
+
+                h2,h3,h4{
+                    color: $color-white;
+                    font-size: 1.875em; //30px
+                }
+
+                .btn{
+                    display: inline-block;
+                }
+            }
         }
     }
 }
