--- a/content/themes/elements/scss/modules/_lists.scss
+++ b/content/themes/elements/scss/modules/_lists.scss
@@ -15,6 +15,10 @@
             padding: 30px 0;
             border-bottom: 1px solid $color-grey;
 
+            &:last-child{
+                border-bottom: none;
+            }
+            
             .media__image{
                 width: 270px;
             }
