--- a/content/themes/elements/scss/modules/_grid.scss
+++ b/content/themes/elements/scss/modules/_grid.scss
@@ -5,11 +5,10 @@
 }
 
 .grid-item{
-    min-height: 500px;
-
     figure{
         width: 100%;
         height: 100%;
+        padding-bottom: 50px;
 
         background-color: $color-white;
 
@@ -23,7 +22,7 @@
         }
 
         figcaption{
-            padding: 30px;
+            padding: 30px 30px 0;
 
             > *:not(.post-data){
                 display: block;
@@ -42,7 +41,7 @@
 
         // for semi featured posts
         > .post-data{
-            bottom: 30px;
+            bottom: 20px;
             left: 30px;
             position: absolute;
         }
