--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -28,7 +28,9 @@
 
 @import "modules/_article";
 @import "modules/_buttons";
+@import "modules/_comments";
 @import "modules/_figure";
+@import "modules/_form";
 @import "modules/_grid";
 @import "modules/_links";
 @import "modules/_lists";
