--- a/content/themes/elements/scss/modules/_buttons.scss
+++ b/content/themes/elements/scss/modules/_buttons.scss
@@ -1,4 +1,5 @@
-.btn{
+.btn,
+input[type="submit"]{
     @include font-regular{
         color: $color-white;
     }
@@ -26,7 +27,7 @@
         margin-left: 10px;
     }
 
-    &--linkedin{
+    &.btn--linkedin{
         background-color: #0173B1;
 
         &:hover,
@@ -35,7 +36,7 @@
         }
     }
 
-    &--twitter{
+    &.btn--twitter{
         background-color: #1DA1F1;
 
         &:hover,
@@ -44,7 +45,7 @@
         }
     }
 
-    &--facebook{
+    &.btn--facebook{
         background-color: #3B5998;
 
         &:hover,
