--- a/content/themes/elements/scss/modules/sections/_section.scss
+++ b/content/themes/elements/scss/modules/sections/_section.scss
@@ -12,4 +12,8 @@
     &--bg{
         background-color: $color-grey-light;
     }
+
+    &--border-top{
+        border-top: 1px solid $color-grey;
+    }
 }
