--- a/content/themes/elements/scss/modules/_article.scss
+++ b/content/themes/elements/scss/modules/_article.scss
@@ -1,6 +1,6 @@
 article{
     padding-bottom: 30px;
-    
+
     p{
         line-height: 1.8;
         font-size: 1.125em; //18px
@@ -10,9 +10,36 @@ article{
         padding-top: 30px;
         padding-bottom: 20px;
 
-        small{
-            @include font-regular{
-                color: $color-grey-text-light;
+        .post-meta,
+        .post-data{
+            small{
+                @include font-regular{
+                    color: $color-grey-text-light;
+                }
+            }
+        }
+
+        .author{
+            text-align: right;
+
+            @media (max-width: 992px) {
+                display: none;
+            }
+
+            &__image{
+                width: 60px;
+                display: block;
+                margin-left: auto;
+                margin-bottom: 10px;
+                border-radius: 100px;
+            }
+
+            small{
+                display: block;
+            }
+
+            &__function{
+                color: #929292;
             }
         }
 
