Add like functionality

--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -32,6 +32,7 @@
 @import "modules/_figure";
 @import "modules/_form";
 @import "modules/_grid";
+@import "modules/_like";
 @import "modules/_links";
 @import "modules/_lists";
 @import "modules/_media";
