Add social buttons

--- a/content/themes/elements/scss/modules/_grid.scss
+++ b/content/themes/elements/scss/modules/_grid.scss
@@ -47,10 +47,14 @@
                 }
 
                 transition: .2s;
+            }
 
+            .post-title{
                 &:hover,
                 &:focus{
-                    color: $color-blue;
+                    h3{
+                        color: $color-blue;
+                    }
                 }
             }
         }
