Add responsive styling

--- a/content/themes/elements/scss/modules/_article.scss
+++ b/content/themes/elements/scss/modules/_article.scss
@@ -1,5 +1,5 @@
 article{
-    padding-bottom: 30px;
+    padding: 0 15px 30px;
 
     p{
         line-height: 1.8;
@@ -44,7 +44,7 @@ article{
         }
 
         h1{
-            margin: 10px 0;
+            margin: 10px 0 12px;
         }
     }
 
