--- a/content/themes/elements/scss/layout/_footer.scss
+++ b/content/themes/elements/scss/layout/_footer.scss
@@ -1,8 +1,12 @@
 .footer{
-    padding: 40px 15px;
+    padding: 40px 30px;
 
     background-color: $color-grey-light;
-    
+
+    @media ($md) {
+        padding: 40px 15px;
+    }
+
     &__body{
         max-width: 700px;
         margin: auto;
@@ -15,6 +19,11 @@
         img{
             max-width: 250px;
             margin-right: 30px;
+            margin-bottom: 30px;
+
+            @media ($md) {
+                margin-bottom: 0;
+            }
         }
 
         a{
