--- a/content/themes/elements/scss/modules/_lists.scss
+++ b/content/themes/elements/scss/modules/_lists.scss
@@ -12,13 +12,14 @@
 
     &--posts{
         li{
-            padding: 30px 0;
+            padding-bottom: 30px;
+            margin-bottom: 30px;
             border-bottom: 1px solid $color-grey;
 
             &:last-child{
                 border-bottom: none;
             }
-            
+
             .media__image{
                 width: 270px;
             }
