Add custom author fields

--- a/content/themes/elements/scss/modules/sections/_section-hero.scss
+++ b/content/themes/elements/scss/modules/sections/_section-hero.scss
@@ -17,6 +17,10 @@
         @media ($md) {
             padding-top: 30px;
             padding-bottom: 30px;
+
+            img{
+                width: 100%;
+            }
         }
     }
 }
