Add video content element

--- a/content/themes/elements/scss/app.scss
+++ b/content/themes/elements/scss/app.scss
@@ -25,6 +25,7 @@
 @import "modules/sections/_section-image";
 @import "modules/sections/_section-quote";
 @import "modules/sections/_section-text";
+@import "modules/sections/_section-video";
 
 @import "modules/_article";
 @import "modules/_buttons";
