--- a/content/themes/elements/scss/modules/_post.scss
+++ b/content/themes/elements/scss/modules/_post.scss
@@ -17,6 +17,10 @@
     &__date{
         margin-left: 3px;
     }
+    &__author{
+      dispay:inline-block;
+      width:100%;
+    }
 }
 
 .post--featured{
