--- a/content/themes/elements/scss/modules/_newsletter.scss
+++ b/content/themes/elements/scss/modules/_newsletter.scss
@@ -1,6 +1,17 @@
+.layover{
+    content: " ";
+    position:fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: none;
+}
 .help-popup {
     position: fixed;
-    bottom: -260px; // Hide in negative bottom space.
+    top:50%; // Hide in negative bottom space.
+    left:50%;
     right: 30px;
     z-index: 999;
     min-height: 260px;
@@ -9,9 +20,8 @@
     background-color: white;
     border: 1px solid #eeeeee;
     border-radius: 4px;
-
-    transition: .7s cubic-bezier(.94,0,.26,1.01) all;
-
+    display: none;
+    transform: translate(-50%, -50%);
     .form-group {
         margin-bottom: 0;
     }
